--- a/vignettes/spatialAnalysis.qmd
+++ b/vignettes/spatialAnalysis.qmd
@@ -1181,173 +1181,178 @@ boxplot(data[["gene_mean_celltype"]][rownames(prop),"T_cell__region_1--CD8"]~as.
 
 
 
-<!-- ```{r} -->
-<!-- make_channel_pairs <- function(channel_names) { -->
-<!--   combos <- combn(channel_names, 2, simplify = FALSE) -->
-<!--   named_list <- setNames( -->
-<!--     lapply(combos, identity), -->
-<!--     sapply(combos, function(x) paste(x, collapse = "__")) -->
-<!--   ) -->
-<!--   return(named_list) -->
-<!-- } -->
-
-<!-- channelPairs <- make_channel_pairs(dimnames(images[[1]])[[3]]) -->
-
-<!-- spatstat.explore::dendensity(img[,,1]) -->
-
-<!-- function(img, pairs){ -->
-<!--   use <- sample(ncol(img)*nrow(img), 1000) -->
-<!--  corr <- lapply(pairs, function(x){ -->
-<!--    cor(as.vector(img[,,x[1]])[use], as.vector(img[,,x[2]])[use]) -->
-<!--  }) -->
-<!-- } -->
-
-<!-- disc <- makeBrush(21, shape='disc') -->
-<!-- smoothImages <- BiocParallel::bplapply(images, function(x){ -->
-<!--   apply(x,3,function(img){ -->
-<!--     filter2(img, disc) -->
-<!--   }) -->
-<!-- }, BPPARAM = BPPARAM) -->
-
-<!-- correlations <- lapply(images, function(img){ -->
-<!-- unlist(lapply(channelPairs, function(x){ -->
-<!--   cor(as.vector(img[,,x[1]]), as.vector(img[,,x[2]]), use = "complete") -->
-<!-- }))}) -->
-
-<!-- corr <- do.call("rbind", correlations) -->
-<!-- tests <- apply(corr[rownames(prop),], 2, function(x){ -->
-<!--   t.test(x~clinical[rownames(prop), "Status"])$stat -->
-<!-- }) -->
-
-
-<!-- CD8_ER <- lapply(images[rownames(prop)], function(img){ -->
-<!--   disc <- makeBrush(51, shape='disc') -->
-<!--   # CD8 <- gblur((img[,,"CD8"]), 5) -->
-<!--   # ER <- gblur((img[,,"ECAD"]), 5) -->
-<!--  CD8 <- filter2((img[,,"CD8"]), disc) -->
-<!--  ECAD <- filter2((img[,,"ECAD"]), disc) -->
+```{r}
+# make_channel_pairs <- function(channel_names) {
+#   combos <- combn(channel_names, 2, simplify = FALSE)
+#   named_list <- setNames(
+#     lapply(combos, identity),
+#     sapply(combos, function(x) paste(x, collapse = "__"))
+#   )
+#   return(named_list)
+# }
+# 
+# channelPairs <- make_channel_pairs(dimnames(images[[1]])[[3]])
+# 
+# spatstat.explore::dendensity(img[,,1])
+# 
+# function(img, pairs){
+#   use <- sample(ncol(img)*nrow(img), 1000)
+#  corr <- lapply(pairs, function(x){
+#    cor(as.vector(img[,,x[1]])[use], as.vector(img[,,x[2]])[use])
+#  })
+# }
+# 
+# disc <- makeBrush(21, shape='disc')
+# smoothImages <- BiocParallel::bplapply(images, function(x){
+#   apply(x,3,function(img){
+#     filter2(img, disc)
+#   })
+# }, BPPARAM = BPPARAM)
+# 
+# correlations <- lapply(images, function(img){
+# unlist(lapply(channelPairs, function(x){
+#   cor(as.vector(img[,,x[1]]), as.vector(img[,,x[2]]), use = "complete")
+# }))})
+# 
+# corr <- do.call("rbind", correlations)
+# tests <- apply(corr[rownames(prop),], 2, function(x){
+#   t.test(x~clinical[rownames(prop), "Status"])$stat
+# })
 
 
-<!-- #   CD8 <- imager::correlate(imager::as.cimg(as.matrix(img[,,"CD8"])),imager::as.cimg(disc)) -->
-<!-- #   CD8 <- as.matrix(CD8) -->
-<!-- #  -->
-<!-- # #  ER <- imager::correlate(imager::as.cimg(as.matrix(img[,,"ER"])),imager::as.cimg(disc)) -->
-<!-- # #  ER <- as.matrix(ER) -->
-<!-- #  -->
-<!-- #   ECAD <- imager::correlate(imager::as.cimg(as.matrix(img[,,"ECAD"])),imager::as.cimg(disc)) -->
-<!-- #   ECAD <- as.matrix(ECAD) -->
+CD8_PanKRT <- lapply(images[rownames(prop)], function(img){
+  disc <- makeBrush(51, shape='disc')
+  # CD8 <- gblur((img[,,"CD8"]), 5)
+  # ER <- gblur((img[,,"ECAD"]), 5)
+ CD8 <- filter2((img[,,"CD8"]), disc)
+ PanKRT <- filter2((img[,,"PanKRT"]), disc)
+ cor(as.vector(CD8), as.vector(PanKRT))
 
-<!--   #corr <- cor(as.vector(CD8), as.vector(ECAD), use = "complete") -->
-<!--   #corr -->
-<!--   compute_top_right_proportions_fast(cbind(as.vector(CD8), as.vector(ECAD)), 0.33)[1,2] -->
+#   CD8 <- imager::correlate(imager::as.cimg(as.matrix(img[,,"CD8"])),imager::as.cimg(disc))
+#   CD8 <- as.matrix(CD8)
+#
+# #  ER <- imager::correlate(imager::as.cimg(as.matrix(img[,,"ER"])),imager::as.cimg(disc))
+# #  ER <- as.matrix(ER)
+#
+#   ECAD <- imager::correlate(imager::as.cimg(as.matrix(img[,,"ECAD"])),imager::as.cimg(disc))
+#   ECAD <- as.matrix(ECAD)
 
-<!-- }) -->
+  #corr <- cor(as.vector(CD8), as.vector(ECAD), use = "complete")
+  #corr
+ # compute_top_right_proportions_fast(cbind(as.vector(CD8), as.vector(ECAD)), 0.33)[1,2]
 
-<!-- CD8_ER <- unlist(CD8_ER) -->
+})
 
-
-<!-- boxplot(CD8_ER[rownames(prop)]~clinical[rownames(prop), "Status"]) -->
-
-<!-- t.test(CD8_ER[rownames(prop)]~clinical[rownames(prop), "Status"]) -->
-
-<!-- ``` -->
-<!-- ```{r} -->
-
-
-
-<!-- compute_top_right_proportions_fast <- function(mat, threshold = 0.5) { -->
-<!--   # Min-max scale each column -->
-<!-- trim_99 <- function(x) { -->
-<!-- q99 <- quantile(x, 0.99, na.rm = TRUE) -->
-<!-- x[x > q99] <- q99 -->
-<!--  x -->
-<!-- } -->
-<!--  mat <- apply(mat, 2, trim_99) -->
+CD8_PanKRT <- unlist(CD8_PanKRT)
 
 
-<!--   scaled <- sweep(mat, 2, apply(mat, 2, min), "-") -->
-<!--   scaled <- sweep(scaled, 2, apply(mat, 2, max) - apply(mat, 2, min), "/") -->
+boxplot(CD8_PanKRT[rownames(prop)]~clinical[rownames(prop), "Status"])
 
-<!--   # Logical matrix: TRUE if value > threshold -->
-<!--   mask <- scaled > threshold -->
+t.test(CD8_PanKRT[rownames(prop)]~clinical[rownames(prop), "Status"])
 
-<!--   # Compute pairwise proportions using cross-product -->
-<!--   proportions <- (t(mask) %*% mask) / nrow(mat) -->
-
-<!--   # Set diagonal to 0 -->
-<!--   diag(proportions) <- 0 -->
-
-<!--   # Add names if available -->
-<!--   if (!is.null(colnames(mat))) { -->
-<!--     colnames(proportions) <- colnames(mat) -->
-<!--     rownames(proportions) <- colnames(mat) -->
-<!--   } -->
-
-<!--   return(proportions) -->
-<!-- } -->
+```
+```{r}
 
 
+
+compute_top_right_proportions_fast <- function(mat, threshold = 0.5) {
+  # Min-max scale each column
+trim_99 <- function(x) {
+q99 <- quantile(x, 0.99, na.rm = TRUE)
+x[x > q99] <- q99
+ x
+}
+ mat <- apply(mat, 2, trim_99)
+
+
+  scaled <- sweep(mat, 2, apply(mat, 2, min), "-")
+  scaled <- sweep(scaled, 2, apply(mat, 2, max) - apply(mat, 2, min), "/")
+
+  # Logical matrix: TRUE if value > threshold
+  mask <- scaled > threshold
+
+  # Compute pairwise proportions using cross-product
+  proportions <- (t(mask) %*% mask) / nrow(mat)
+
+  # Set diagonal to 0
+  diag(proportions) <- 0
+
+  # Add names if available
+  if (!is.null(colnames(mat))) {
+    colnames(proportions) <- colnames(mat)
+    rownames(proportions) <- colnames(mat)
+  }
+
+  return(proportions)
+}
 
 
 
 
-<!-- compute_colour_correlations_fast <- function(image_array, patch_size = 8) { -->
-<!--   h <- dim(image_array)[1] -->
-<!--   w <- dim(image_array)[2] -->
-<!--   ch <- dim(image_array)[3] -->
-
-<!--   # Crop image to fit patch size -->
-<!--   h_crop <- floor(h / patch_size) * patch_size -->
-<!--   w_crop <- floor(w / patch_size) * patch_size -->
-<!--   image_array <- image_array[1:h_crop, 1:w_crop, ] -->
-
-<!--   # Reshape into patches -->
-<!--   patches <- array(image_array, dim = c(patch_size, h_crop / patch_size, patch_size, w_crop / patch_size, ch)) -->
-<!--   patches <- aperm(patches, c(2, 4, 5, 1, 3))  # [patch_y, patch_x, channel, patch_h, patch_w] -->
-
-<!--   # Compute mean intensity per patch per channel -->
-<!--   patch_means <- apply(patches, c(1, 2, 3), mean)  # [patch_y, patch_x, channel] -->
-<!--   patch_means <- matrix(aperm(patch_means, c(1, 2, 3)), ncol = ch)  # [num_patches, channels] -->
-
-<!--   # Correlation matrix -->
-<!--  # cor(patch_means) -->
-
-<!--   # Continuous mutual information -->
-<!--   compute_top_right_proportions_fast(patch_means, threshold = 0.1) -->
-
-<!-- } -->
 
 
-<!-- corrs <- lapply(images, function(img){ -->
-<!--   compute_colour_correlations_fast(img, patch_size = 50) -->
-<!-- }) -->
+compute_colour_correlations_fast <- function(image_array, patch_size = 8) {
+  h <- dim(image_array)[1]
+  w <- dim(image_array)[2]
+  ch <- dim(image_array)[3]
 
-<!-- corArray <- abind::abind(corrs, along = 3) -->
+  # Crop image to fit patch size
+  h_crop <- floor(h / patch_size) * patch_size
+  w_crop <- floor(w / patch_size) * patch_size
+  image_array <- image_array[1:h_crop, 1:w_crop, ]
 
-<!-- corTest <- apply(corArray[,,rownames(prop)], c(1,2), function(x){ -->
-<!--   tryCatch({t.test(x~clinical[rownames(prop), "Status"])$statistic}, error = function(e)NA) -->
-<!-- }) -->
+  # Reshape into patches
+  patches <- array(image_array, dim = c(patch_size, h_crop / patch_size, patch_size, w_crop / patch_size, ch))
+  patches <- aperm(patches, c(2, 4, 5, 1, 3))  # [patch_y, patch_x, channel, patch_h, patch_w]
 
-<!-- colnames(corTest) <- rownames(corTest) <- dimnames(images[[1]])[[3]] -->
+  # Compute mean intensity per patch per channel
+  patch_means <- apply(patches, c(1, 2, 3), mean)  # [patch_y, patch_x, channel]
+  patch_means <- matrix(aperm(patch_means, c(1, 2, 3)), ncol = ch)  # [num_patches, channels]
 
+  # Correlation matrix
+  #cor(patch_means)
 
-<!-- # Assume `mat` is your matrix with row and column names -->
-<!-- vec <- as.vector(corTest) -->
-<!-- names(vec) <- outer(rownames(corTest), colnames(corTest), paste, sep = "__") -->
-<!-- names(vec) <- as.vector(names(vec)) -->
+  # Continuous mutual information
+  compute_top_right_proportions_fast(patch_means, threshold = 0.1)
 
-
-<!-- corArray2 <- corArray -->
-<!-- colnames(corArray2) <- rownames(corArray2) <- dimnames(images[[1]])[[3]] -->
-
-<!-- boxplot(corArray2["ER","CD8",rownames(prop)]~clinical[rownames(prop), "Status"]) -->
-<!-- t.test(corArray2["ECAD","CD8",rownames(prop)]~clinical[rownames(prop), "Status"]) -->
-
-
-<!-- boxplot(corArray2["FOXP3","IDO1",rownames(prop)]~clinical[rownames(prop), "Status"]) -->
+}
 
 
-<!-- ``` -->
+corrs <- lapply(images[rownames(prop)], function(img){
+  compute_colour_correlations_fast(img, patch_size = 50)
+})
+
+corArray <- abind::abind(corrs, along = 3)
+
+corTest <- apply(corArray[,,rownames(prop)], c(1,2), function(x){
+  tryCatch({t.test(x~clinical[rownames(prop), "Status"])$statistic}, error = function(e)NA)
+})
+
+colnames(corTest) <- rownames(corTest) <- dimnames(images[[1]])[[3]]
+
+
+# Assume `mat` is your matrix with row and column names
+vec <- as.vector(corTest)
+names(vec) <- outer(rownames(corTest), colnames(corTest), paste, sep = "__")
+names(vec) <- as.vector(names(vec))
+
+
+sort(vec[grep("CD8",names(vec))]) |> head()
+
+corArray2 <- corArray
+colnames(corArray2) <- rownames(corArray2) <- dimnames(images[[1]])[[3]]
+
+boxplot(corArray2["PanKRT","CD8",rownames(prop)]~clinical[rownames(prop), "Status"])
+t.test(corArray2["PanKRT","CD8",rownames(prop)]~clinical[rownames(prop), "Status"])
+
+boxplot(corArray2["ECAD","CD8",rownames(prop)]~clinical[rownames(prop), "Status"])
+t.test(corArray2["ECAD","CD8",rownames(prop)]~clinical[rownames(prop), "Status"])
+
+
+
+
+
+```
 
 
 <!-- ```{r} -->
